[gd_scene load_steps=7 format=3 uid="uid://c0ubuu8ewrh"]

[ext_resource type="Script" path="res://items/ingredient/ingredient_base.gd" id="1_3oxu4"]
[ext_resource type="Texture2D" uid="uid://bqwexe1go8gd5" path="res://addons/placeholders/circle.png" id="2_q22ul"]
[ext_resource type="FontFile" uid="uid://dwtchfr018ffl" path="res://assets/fonts/funnytype.ttf" id="3_twkqv"]
[ext_resource type="AudioStream" uid="uid://b6v5t8qlab064" path="res://assets/sound/fly_sound.mp3" id="4_ua0eo"]

[sub_resource type="LabelSettings" id="LabelSettings_etofn"]
font = ExtResource("3_twkqv")
font_color = Color(0.0846899, 0.0846899, 0.0846899, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfkqb"]
size = Vector2(0, 0)

[node name="Ingredient" type="Node2D"]
position = Vector2(588, 335)
script = ExtResource("1_3oxu4")
image = ExtResource("2_q22ul")
label = "Placeholder"

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Anchor" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Anchor"]
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_etofn")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_hfkqb")

[node name="FlyAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ua0eo")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
